# rogue-like

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  setup.py
cpp_src/: common.cpp  common.h  test.cpp  wrapper.cpp
cpp_src/controller/: controller.cpp  controller.h
cpp_src/entity/: armor.h  chest.h  components.cpp  components.h  entity.cpp  entity.hpp  goblin.h  goblin_guard.h  goblin_worker.h  items.h  player.h  potion.h  shield.h  shovel.h  sword.h  trap.h  wall.h
cpp_src/game_state/: gamestate.cpp  gamestate.cpp.txt  gamestate.h
cpp_src/game_state/systems/: base_system.h  decision_making_system.cpp  decision_making_system.h  decision_making_system.hpp  drawing_system.cpp  drawing_system.h  interaction_system.cpp  interaction_system.h  move_system.cpp  move_system.h
cpp_src/level/: room.cpp  room.h  room.hpp  room_view.cpp  room_view.h  tile.cpp  tile.h
cpp_src/serializers/: default_serializers.h  non_default_serialize.cpp  non_default_serialize.h  serialize_info.h
cpp_src/strategies/: abstract_strategy.cpp  abstract_strategy.h
cpp_src/strategies/agressive_strategy/: agressive_strategy.cpp  agressive_strategy.h
cpp_src/strategies/fearfull_strategy/: fearfull_strategy.cpp  fearfull_strategy.h
cpp_src/strategies/passive_strategy/: passive_strategy.cpp  passive_strategy.h
cpp_src/strategies/random_strategy/: random_strategy.cpp  random_strategy.h
cpp_src/utility/: all_entities.h  base_includes.h  common_debug.h  common_release.h  entity_info.h  register_for_component.h  register_for_components.h  register_for_entities.h  utils.cpp  utils.h
cpp_src/utility/debug_only/: common_debug.h  register_for_components.h  register_for_entities.h
diagrams/: usecase.puml
docker/: README.md
docker/single_player/: Dockerfile
docs/: Cl_Srv_API.md  diagram.md
python_src/: client.py  command.py  main.py  sample_game_state.json  server.py  test.py
uml/: diagram.md
